[package]
name = "envoy-ext-authz"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1.20.2"
redis = { version = "0.28.2", features = ["tokio-comp"]}
dashmap = "6.1.0"
[build-dependencies]
tonic-build = "0.12.3"